# SpatialWM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: b0_pixel.yaml  b1_actionfree.yaml  t_egomotion.yaml
docs/: 3d_vision_story.md  bundle_adjust.md  feature_matching.md  geometry_quality_bridge.md  icp.md  kitti_multisequence_evaluation.md  lidar_odometry_bev.md  ransac.md  sensor_ingestion.md  sparse_sfm.md  tartanair_registration.md  two_view_geometry.md
figures/curated/: bundle_adjust_metrics.json  geometry_icp_metrics.json  geometry_ransac_metrics.json  kitti_lidar_camera_projection.json  kitti_lidar_metrics.json  kitti_lidar_trajectory.npz  kitti_multisequence_metrics.json  kitti_sparse_sfm_metrics.json  (+5 more)
scripts/: build_sensor_manifest.py  cache_latents.py  download_kitti_slice.py  download_scannet_subset.py  download_tartanair_slice.py  evaluate_kitti_lidar.py  evaluate_kitti_sfm.py  evaluate_kitti_suite.py  evaluate_tartanair_icp.py  make_figures.py  run_colmap.sh  run_orbslam3.sh
tests/: conftest.py  test_bundle_adjust.py  test_camera.py  test_download_kitti_slice.py  test_elevation.py  test_evaluate_kitti_lidar.py  test_evaluate_kitti_sfm.py  test_evaluate_kitti_suite.py  test_features.py  test_features_2d.py  test_icp.py  test_jepa_min.py  test_lidar_io.py  test_lidar_odometry.py  test_lift.py  test_metrics.py  test_planner.py  test_pointnet.py  test_predictor.py  test_probes.py  test_ransac.py  test_sensor_data.py  test_sfm_toy.py  test_tartanair.py  test_trajectory.py  test_two_view.py  test_utils.py  test_voxelize.py
(+32 files in other folders)
