[project]
name = "spatialwm"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.13",
  "opencv-python>=4.9",
  "open3d==0.19.0",
  "einops>=0.8",
  "pyyaml>=6",
  "pandas>=2.2",
  "pyarrow>=16",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "scikit-learn>=1.4",
  "pillow>=10",
  "torch>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
backbone = ["timm>=1.0"]   # DINOv2/V-JEPA path, Week 4

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spatialwm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # errors, pyflakes (unused imports), isort
